--- a/index.html
+++ b/index.html
@@ -7,6 +7,98 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <nav>
+            <a href="">
+                WebStudio
+            </a>
+
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+
+        </nav>
+
+        <ul>
+            <li>info@devstudio.com</li>
+            <li>+11 (000) 111-11-11</li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
+            <h2>Advantages</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the businessproblem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/pc.jpg" alt="Progres">
+                    </a>
+                    <a href="">    
+                        <img src="./images/smartphone.jpg" alt="Chat">
+                    </a>
+                    <a href="">
+                        <img src="./images/laptopandsmartphone.jpg" alt="News">
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/markguerrero.jpg" alt="Mark Guerrero">
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
+                    </a>
+                    <a href="">
+                        <img src="./images/tomford.jpg" alt="Tom Ford">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
+                    </a>
+                    <a href="">
+                        <img src="./images/camilagarcia.jpg" alt="Camila Garcia">
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
+                    </a>
+                    <a href="">
+                        <img src="./images/danielwilson.jpg" alt="Daniel Wilson">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
